--- a/plot.Rmd
+++ b/plot.Rmd
@@ -15,8 +15,10 @@ library(ggpubr)
 library(data.table)
 library(Metrics)
 library(tidyverse)
+library(GGally)
 
 source("common_plot.R")
+source("common_regression.R")
 
 knitr::opts_chunk$set(fig.width=16, fig.height=8)
 
@@ -36,15 +38,22 @@ neher_data = read.csv("_ignore/Neher_test_data_time_vl_df.tsv", sep = "\t")
 The following plots show the estimated time of infection(ETI) (as calculated using the Neher equation) versus the actual time of infection (TI) (time since birth). Note that average pairwise diversity (APD) parameters change for each plot (color of regression line indicates different APD cutoff). Note that we are also varying runs analyzed and fragments analyzed. The points are shaped either by Run number or by patient ID (Sample). The blue dotted line for each plot represents the exact timing correlation (i.e. ETI = TI)...
 
 
-```{r warning=FALSE, results='hide'}
+```{r warning=FALSE, results='hide', message = FALSE}
 # Make plots!
 make_all_plots(x = "ti", y = "eti")
+```
+
+The following plot compares the viral load over time for our data and the Neher test cohort data.
+
+```{r warning=FALSE, results='hide', message = FALSE}
+# Make plots for Neher comparison!
+plot_model_compare(data = all_runs, test_data = neher_data)
 ```
 
 The following plots show the average pairwise diversity by fragment for each patient (Sample). The facetted plots (3X3) are showing individual runs whereas others (1X3) are showing all runs combined. Note that average pairwise diversity (APD) parameters change for each plot.
 
 
-```{r warning=FALSE, results='hide'}
+```{r warning=FALSE, results='hide', message = FALSE}
 # Make plots!
 make_all_plots(x = "ti", y = "apd")
 ```
@@ -52,7 +61,7 @@ make_all_plots(x = "ti", y = "apd")
 The following plots show the log viral load versus average pairwise diversity by fragment and patient (Sample). The plots are showing all runs combined. Note that average pairwise diversity (APD) parameters change for each plot.
 
 
-```{r warning=FALSE, results='hide'}
+```{r warning=FALSE, results='hide', message = FALSE}
 # Make plots!
 make_all_plots(y = "apd", x = "vl")
 ```
@@ -60,15 +69,21 @@ make_all_plots(y = "apd", x = "vl")
 The following plots show the log viral load versus mean absolute error (estimated TI - actual TI) by fragment and patient (Sample). The plots are showing all runs combined. Note that average pairwise diversity (APD) parameters change for each plot.
 
 
-```{r warning=FALSE, results='hide'}
+```{r warning=FALSE, results='hide', message = FALSE}
 # Make plots!
 make_all_plots(y = "mae", x = "vl")
 ```
+The following plots show the relationship between Actual Time of Infection, log10(Viral Load), and ADP...
 
-The following plot compares the viral load over time for our data and the Neher test cohort data.
+```{r warning=FALSE, results='hide', message = FALSE}
+# Make plots!
+make_all_plots(x = "none", y = "none")
+```
 
-```{r warning=FALSE, results='hide'}
-# Make plots for Neher comparison!
-plot_model_compare(data = all_runs, test_data = neher_data)
+The following plots show the relationship between rate of apd change over time and set point viral load (average viral load across time points) along with the regression coefficient and pvalue for the regression. 
+
+```{r warning=FALSE, results='hide', message = FALSE}
+# Make plots!
+make_all_plots(x = "none", y = "none")
 ```
 
