adding Neher cohort comparison plotting funcitonality to scripts

--- a/plot.Rmd
+++ b/plot.Rmd
@@ -30,10 +30,13 @@ setwd("/Users/magdalenarussell/Documents/Matsen_group/infection-timing")
 
 # Load existing data as `all_runs` file
 all_runs = read.csv("_ignore/AllRunsAvg.csv")
+all_runs$cohort = "Infant"
 all_runs_m = calc_mae(all_runs)
 
 # Load Neher paper test data as `Neher_data` file
-neher_data = read.csv("_ignore/Neher_test_data_time_vl_df.tsv", sep = "\t")
+neher_data = read.csv("_ignore/Neher_data_apd_vl.csv")
+neher_data$cohort = "Neher"
+
 ```
 
 The following plots show the estimated time of infection(ETI) (as calculated using the Neher equation) versus the actual time of infection (TI) (time since birth). Note that average pairwise diversity (APD) parameters change for each plot (color of regression line indicates different APD cutoff). Note that we are also varying runs analyzed and fragments analyzed. The points are shaped either by Run number or by patient ID (Sample). The blue dotted line for each plot represents the exact timing correlation (i.e. ETI = TI)...
@@ -41,14 +44,14 @@ The following plots show the estimated time of infection(ETI) (as calculated usi
 
 ```{r warning=FALSE, results='hide', message = FALSE}
 # Make plots!
-make_all_plots(data = all_runs_m, x = "ti", y = "eti")
+make_all_plots(data = all_runs_m, x = "ti", y = "eti", compare = FALSE)
 ```
 
 The following plot compares the viral load over time for our data and the Neher test cohort data.
 
 ```{r warning=FALSE, results='hide', message = FALSE}
 # Make plots for Neher comparison!
-plot_model_compare(data = all_runs, test_data = neher_data)
+plot_model_compare(data = all_runs, test_data = neher_data, compare_var = "VL")
 ```
 
 The following plots show the average pairwise diversity by fragment for each patient (Sample). The facetted plots (3X3) are showing individual runs whereas others (1X3) are showing all runs combined. Note that average pairwise diversity (APD) parameters change for each plot.
@@ -56,7 +59,7 @@ The following plots show the average pairwise diversity by fragment for each pat
 
 ```{r warning=FALSE, results='hide', message = FALSE}
 # Make plots!
-make_all_plots(data = all_runs_m, x = "ti", y = "apd")
+make_all_plots(data = all_runs_m, x = "ti", y = "apd", compare = FALSE)
 ```
 
 The following plots show the log viral load versus average pairwise diversity by fragment and patient (Sample). The plots are showing all runs combined. Note that average pairwise diversity (APD) parameters change for each plot.
@@ -64,7 +67,7 @@ The following plots show the log viral load versus average pairwise diversity by
 
 ```{r warning=FALSE, results='hide', message = FALSE}
 # Make plots!
-make_all_plots(data = all_runs_m, y = "apd", x = "vl")
+make_all_plots(data = all_runs_m, y = "apd", x = "vl", compare = FALSE)
 ```
 
 The following plots show the log viral load versus mean absolute error (estimated TI - actual TI) by fragment and patient (Sample). The plots are showing all runs combined. Note that average pairwise diversity (APD) parameters change for each plot.
@@ -72,19 +75,42 @@ The following plots show the log viral load versus mean absolute error (estimate
 
 ```{r warning=FALSE, results='hide', message = FALSE}
 # Make plots!
-make_all_plots(data = all_runs_m, y = "mae", x = "vl")
+make_all_plots(data = all_runs_m, y = "mae", x = "vl", compare = FALSE)
 ```
 The following plots show the relationship between Actual Time of Infection, log10(Viral Load), and ADP...
 
 ```{r warning=FALSE, results='hide', message = FALSE}
 # Make plots!
-make_all_plots(data = all_runs_m, x = "none", y = "none")
+#make_all_plots(data = all_runs_m, x = "none", y = "none", compare = FALSE)
 ```
 
 The following plots show the relationship between rate of apd change over time and set point viral load (average viral load across time points) along with the regression coefficient and pvalue for the regression. 
 
 ```{r warning=FALSE, results='hide', message = FALSE}
 # Make plots!
-make_all_plots(data = all_runs_m, x = "sp_vl", y ="apd_time")
+make_all_plots(data = all_runs_m, x = "sp_vl", y ="apd_time", compare = FALSE)
+```
+
+The following plots show the average pairwise diversity by fragment for each patient (Sample) versus time for both the Infant data and the Neher data. Note that average pairwise diversity (APD) parameters change for each plot.
+
+
+```{r warning=FALSE, results='hide', message = FALSE}
+# Make plots!
+make_all_plots(data = all_runs_m, x = "ti", y = "apd", compare = TRUE)
+```
+
+The following plots show the log viral load versus average pairwise diversity by fragment and patient (Sample) for both the Infant data and the Neher data. The plots are showing all runs combined. Note that average pairwise diversity (APD) parameters change for each plot.
+
+
+```{r warning=FALSE, results='hide', message = FALSE}
+# Make plots!
+make_all_plots(data = all_runs_m, y = "apd", x = "vl", compare = TRUE)
+```
+
+The following plots show the relationship between rate of apd change over time and set point viral load (average viral load across time points) along with the regression coefficient and pvalue for the regression for both the Infant data and the Neher data. 
+
+```{r warning=FALSE, results='hide', message = FALSE}
+# Make plots!
+make_all_plots(data = all_runs_m, x = "sp_vl", y ="apd_time", compare = TRUE)
 ```
 
