--- a/Bayesian_Infant_Models/plot_bay_multilevel.Rmd
+++ b/Bayesian_Infant_Models/plot_bay_multilevel.Rmd
@@ -25,7 +25,8 @@ knitr::opts_chunk$set(fig.width=8, fig.height=6)
 The following is a list of the multilevel models I have created so far...
 
 ```{r warning=FALSE, results='hide', message = FALSE}
-models = c("multilevel_subject_var_int_model", "multilevel_subject_fragment_var_int_model", "multilevel_subject_var_int_fragment_var_slope_model", "multilevel_subject_var_int_subject_var_slope_model", "multilevel_subject_var_int_fragment_subject_var_slope_model")
+models = c("multilevel_subject_var_int_model",'multilevel_subject_var_int_fragment_var_slope_model', "multilevel_subject_var_int_fragment_subject_var_slope_model", "multilevel_subject_var_int_fragment_subject_run_var_slope_model")
+models = c("multilevel_subject_var_int_model",'multilevel_subject_var_int_fragment_var_slope_model', "multilevel_subject_var_int_fragment_subject_var_slope_model")
 ```
 
 Here, we can plot the estimated time since infection and the actual time since infection to assess model accuracy. 
@@ -33,6 +34,7 @@ Here, we can plot the estimated time since infection and the actual time since i
 ```{r warning=FALSE, results='hide', message = FALSE}
 for (model in models){
     data = get(paste0("results_", model))
+    plot_APD_TI(data, model)
     plot_ETI_TI(data, model)
     plot_ETI_TI_by_subject(data, model)
 }
