--- a/Bayesian_Infant_Models/plot_bay_multilevel.Rmd
+++ b/Bayesian_Infant_Models/plot_bay_multilevel.Rmd
@@ -27,6 +27,7 @@ The following is a list of the multilevel models I have created so far...
 ```{r warning=FALSE, results='hide', message = FALSE}
 models = c("multilevel_subject_var_int_model",'multilevel_subject_var_int_fragment_var_slope_model', "multilevel_subject_var_int_fragment_subject_var_slope_model", "multilevel_subject_var_int_fragment_subject_run_var_slope_model")
 models = c("multilevel_subject_var_int_model",'multilevel_subject_var_int_fragment_var_slope_model', "multilevel_subject_var_int_fragment_subject_var_slope_model")
+models = c("multilevel_fragment_subject_var_slope_model_new", "multilevel_fragment_subject_var_slope_model_new2")
 ```
 
 Here, we can plot the estimated time since infection and the actual time since infection to assess model accuracy. 
