--- a/Bayesian_Infant_Models/plot_bay_multilevel.Rmd
+++ b/Bayesian_Infant_Models/plot_bay_multilevel.Rmd
@@ -25,9 +25,7 @@ knitr::opts_chunk$set(fig.width=8, fig.height=6)
 The following is a list of the multilevel models I have created so far...
 
 ```{r warning=FALSE, results='hide', message = FALSE}
-models = c("multilevel_subject_var_int_model",'multilevel_subject_var_int_fragment_var_slope_model', "multilevel_subject_var_int_fragment_subject_var_slope_model", "multilevel_subject_var_int_fragment_subject_run_var_slope_model")
-models = c("multilevel_subject_var_int_model",'multilevel_subject_var_int_fragment_var_slope_model', "multilevel_subject_var_int_fragment_subject_var_slope_model")
-models = c("multilevel_fragment_subject_var_slope_model_new", "multilevel_fragment_subject_var_slope_model_new2")
+models = c("multilevel_fragment_subject_var_slope_model_new_no_int", "multilevel_fragment_subject_var_slope_model_time_error2", "multilevel_fragment_subject_var_slope_model_time_error2_var_int")
 ```
 
 Here, we can plot the estimated time since infection and the actual time since infection to assess model accuracy. 
