--- a/Bayesian_Infant_Models/stan_models/stan_plot_models.Rmd
+++ b/Bayesian_Infant_Models/stan_models/stan_plot_models.Rmd
@@ -25,7 +25,7 @@ knitr::opts_chunk$set(fig.width=8, fig.height=6)
 The following is a list of the multilevel models I have created so far...
 
 ```{r warning=FALSE, results='hide', message = FALSE}
-models = c("stan_time_correction_varying_slopes_frag_subject_normal_time_correction", "stan_time_correction_varying_slopes_frag_subject")
+models = c("stan_time_correction_varying_slopes_frag_subject_beta_time_correction")
 ```
 
 Here, we can plot the estimated time since infection and the actual time since infection to assess model accuracy. 
